@startuml
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" {
  *id : number <<generated>>
  --
  username: text
  password_hash: text
  password_salt: text
  email_address: text
  created_at: timestamp
  games_played: int
  games_won: int
}

entity "Game" {
  *id : number <<generated>>
  --
  started_at: timestamp
  ended_at: timestamp default null
  winner_id: int <<FK>> default null
}

entity "Participation" {
  *id : number <<generated>>
  --
  player_id: int <<FK>>
  game_id: int <<FK>>
}


"User" ||..o{ "Participation"
"Participation" }|..|| "Game"

@enduml
